--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,6 +1,6 @@
  FROM python:3.7-slim
  RUN mkdir src
  WORKDIR /src
- COPY . .
- RUN pip3 install jupyter
+ COPY requirements.txt .
+ RUN pip3 install requirements.txt
  CMD ["jupyter", "notebook", "--port=8888", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
