--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -1,6 +1,9 @@
- FROM python:3.7-slim
- RUN mkdir src
- WORKDIR /src
- COPY requirements.txt .
- RUN pip3 install requirements.txt
- CMD ["jupyter", "notebook", "--port=8888", "--no-browser", "--ip=0.0.0.0", "--allow-root"]
+FROM python:3.7-slim
+
+RUN mkdir src
+WORKDIR /src
+COPY requirements.txt src/
+
+RUN pip install -r src/requirements.txt
+
+CMD [ "jupyter", "notebook", "--port=8888", "--no-browser" , "--ip=0.0.0.0", "--allow-root"]
