--- a/jupyter/Dockerfile
+++ b/jupyter/Dockerfile
@@ -4,6 +4,7 @@ RUN mkdir src
 WORKDIR /src
 COPY requirements.txt src/
 
+# RUN pip3 install notebook
 RUN pip install -r src/requirements.txt
 
 CMD [ "jupyter", "notebook", "--port=8888", "--no-browser" , "--ip=0.0.0.0", "--allow-root"]
