--- a/jupyter/requirements.txt
+++ b/jupyter/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.18.2
-pandas==1.0.3
-plotly==5.1.0
-scikit-learn==0.22.2.post1
-matplotlib==3.2.1
+numpy
+pandas
+plotly
+scikit-learn
+matplotlib
+notebook
